pa3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID '{' feature_list '}' ';'
    8      | error ';'

    9 dummy_feature_list: %empty

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' exp '}'
   11        | OBJECTID '(' parameter_list ')' ':' TYPEID '{' exp '}'
   12        | OBJECTID ':' TYPEID ASSIGN exp
   13        | OBJECTID ':' TYPEID
   14        | error

   15 feature_list: feature ';'
   16             | feature_list feature ';'

   17 parameter: OBJECTID ':' TYPEID

   18 parameter_list: parameter
   19               | parameter_list ',' parameter

   20 exp: OBJECTID ASSIGN exp
   21    | exp '.' OBJECTID '(' ')'
   22    | exp '.' OBJECTID '(' exp_parameter_list ')'
   23    | exp '@' TYPEID '.' OBJECTID '(' ')'
   24    | exp '@' TYPEID '.' OBJECTID '(' exp_parameter_list ')'
   25    | OBJECTID '(' ')'
   26    | OBJECTID '(' exp_parameter_list ')'
   27    | IF exp THEN exp ELSE exp FI
   28    | WHILE exp LOOP exp POOL
   29    | '{' block '}'
   30    | LET let_stmt
   31    | CASE exp OF branch ESAC
   32    | NEW TYPEID
   33    | ISVOID exp
   34    | exp '+' exp
   35    | exp '-' exp
   36    | exp '*' exp
   37    | exp '/' exp
   38    | '~' exp
   39    | exp '<' exp
   40    | exp LE exp
   41    | exp '=' exp
   42    | NOT exp
   43    | '(' exp ')'
   44    | OBJECTID
   45    | INT_CONST
   46    | STR_CONST
   47    | BOOL_CONST

   48 exp_parameter_list: exp
   49                   | exp_parameter_list ',' exp

   50 block: exp ';'
   51      | block exp ';'
   52      | error ';'
   53      | block error ';'

   54 branch: OBJECTID ':' TYPEID DARROW exp ';'
   55       | branch OBJECTID ':' TYPEID DARROW exp ';'

   56 let_stmt: OBJECTID ':' TYPEID IN exp
   57         | OBJECTID ':' TYPEID ASSIGN exp IN exp
   58         | OBJECTID ':' TYPEID ',' let_stmt
   59         | OBJECTID ':' TYPEID ASSIGN exp ',' let_stmt
   60         | error let_stmt


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 21 22 23 24 25 26 43
')' (41) 10 11 21 22 23 24 25 26 43
'*' (42) 36
'+' (43) 34
',' (44) 19 49 58 59
'-' (45) 35
'.' (46) 21 22 23 24
'/' (47) 37
':' (58) 10 11 12 13 17 54 55 56 57 58 59
';' (59) 4 5 6 7 8 15 16 50 51 52 53 54 55
'<' (60) 39
'=' (61) 41
'@' (64) 23 24
'{' (123) 4 5 6 7 10 11 29
'}' (125) 4 5 6 7 10 11 29
'~' (126) 38
error (256) 8 14 52 53 60
CLASS (258) 4 5 6 7
ELSE (259) 27
FI (260) 27
IF (261) 27
IN (262) 56 57
INHERITS (263) 5 6
LET (264) 30
LOOP (265) 28
POOL (266) 28
THEN (267) 27
WHILE (268) 28
CASE (269) 31
ESAC (270) 31
OF (271) 31
DARROW (272) 54 55
NEW (273) 32
ISVOID (274) 33
STR_CONST (275) 46
INT_CONST (276) 45
BOOL_CONST (277) 47
TYPEID (278) 4 5 6 7 10 11 12 13 17 23 24 32 54 55 56 57 58 59
OBJECTID (279) 10 11 12 13 17 20 21 22 23 24 25 26 44 54 55 56 57 58
    59
ASSIGN (280) 12 20 57 59
NOT (281) 42
LE (282) 40
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7 8, on right: 2 3
dummy_feature_list (49)
    on left: 9, on right: 4 5
feature (50)
    on left: 10 11 12 13 14, on right: 15 16
feature_list (51)
    on left: 15 16, on right: 6 7 16
parameter (52)
    on left: 17, on right: 18 19
parameter_list (53)
    on left: 18 19, on right: 11 19
exp (54)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47, on right: 10 11 12 20 21 22 23 24
    27 28 31 33 34 35 36 37 38 39 40 41 42 43 48 49 50 51 54 55 56
    57 59
exp_parameter_list (55)
    on left: 48 49, on right: 22 24 26 49
block (56)
    on left: 50 51 52 53, on right: 29 51 53
branch (57)
    on left: 54 55, on right: 31 55
let_stmt (58)
    on left: 56 57 58 59 60, on right: 30 58 59 60


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    8 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    8 class: error ';' .

    $default  reduce using rule 8 (class)


State 7

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID . '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'
    7      | CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 9 (dummy_feature_list)

    dummy_feature_list  go to state 15
    feature             go to state 16
    feature_list        go to state 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 13

   14 feature: error .

    $default  reduce using rule 14 (feature)


State 14

   10 feature: OBJECTID . '(' ')' ':' TYPEID '{' exp '}'
   11        | OBJECTID . '(' parameter_list ')' ':' TYPEID '{' exp '}'
   12        | OBJECTID . ':' TYPEID ASSIGN exp
   13        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift, and go to state 21


State 16

   15 feature_list: feature . ';'

    ';'  shift, and go to state 22


State 17

    7 class: CLASS TYPEID '{' feature_list . '}' ';'
   16 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 23

    feature  go to state 24


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 9 (dummy_feature_list)

    dummy_feature_list  go to state 25
    feature             go to state 16
    feature_list        go to state 26


State 19

   10 feature: OBJECTID '(' . ')' ':' TYPEID '{' exp '}'
   11        | OBJECTID '(' . parameter_list ')' ':' TYPEID '{' exp '}'

    OBJECTID  shift, and go to state 27
    ')'       shift, and go to state 28

    parameter       go to state 29
    parameter_list  go to state 30


State 20

   12 feature: OBJECTID ':' . TYPEID ASSIGN exp
   13        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 31


State 21

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 32


State 22

   15 feature_list: feature ';' .

    $default  reduce using rule 15 (feature_list)


State 23

    7 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


State 24

   16 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 34


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift, and go to state 35


State 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   16 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 36

    feature  go to state 24


State 27

   17 parameter: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 37


State 28

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 38


State 29

   18 parameter_list: parameter .

    $default  reduce using rule 18 (parameter_list)


State 30

   11 feature: OBJECTID '(' parameter_list . ')' ':' TYPEID '{' exp '}'
   19 parameter_list: parameter_list . ',' parameter

    ')'  shift, and go to state 39
    ','  shift, and go to state 40


State 31

   12 feature: OBJECTID ':' TYPEID . ASSIGN exp
   13        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 13 (feature)


State 32

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 33

    7 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 34

   16 feature_list: feature_list feature ';' .

    $default  reduce using rule 16 (feature_list)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 42


State 36

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 43


State 37

   17 parameter: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 44


State 38

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' exp '}'

    TYPEID  shift, and go to state 45


State 39

   11 feature: OBJECTID '(' parameter_list ')' . ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 46


State 40

   19 parameter_list: parameter_list ',' . parameter

    OBJECTID  shift, and go to state 27

    parameter  go to state 47


State 41

   12 feature: OBJECTID ':' TYPEID ASSIGN . exp

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 62


State 42

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 43

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 44

   17 parameter: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (parameter)


State 45

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' exp '}'

    '{'  shift, and go to state 63


State 46

   11 feature: OBJECTID '(' parameter_list ')' ':' . TYPEID '{' exp '}'

    TYPEID  shift, and go to state 64


State 47

   19 parameter_list: parameter_list ',' parameter .

    $default  reduce using rule 19 (parameter_list)


State 48

   27 exp: IF . exp THEN exp ELSE exp FI

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 65


State 49

   30 exp: LET . let_stmt

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67

    let_stmt  go to state 68


State 50

   28 exp: WHILE . exp LOOP exp POOL

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 69


State 51

   31 exp: CASE . exp OF branch ESAC

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 70


State 52

   32 exp: NEW . TYPEID

    TYPEID  shift, and go to state 71


State 53

   33 exp: ISVOID . exp

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 72


State 54

   46 exp: STR_CONST .

    $default  reduce using rule 46 (exp)


State 55

   45 exp: INT_CONST .

    $default  reduce using rule 45 (exp)


State 56

   47 exp: BOOL_CONST .

    $default  reduce using rule 47 (exp)


State 57

   20 exp: OBJECTID . ASSIGN exp
   25    | OBJECTID . '(' ')'
   26    | OBJECTID . '(' exp_parameter_list ')'
   44    | OBJECTID .

    ASSIGN  shift, and go to state 73
    '('     shift, and go to state 74

    $default  reduce using rule 44 (exp)


State 58

   42 exp: NOT . exp

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 75


State 59

   38 exp: '~' . exp

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 76


State 60

   29 exp: '{' . block '}'

    error       shift, and go to state 77
    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp    go to state 78
    block  go to state 79


State 61

   43 exp: '(' . exp ')'

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 80


State 62

   12 feature: OBJECTID ':' TYPEID ASSIGN exp .
   21 exp: exp . '.' OBJECTID '(' ')'
   22    | exp . '.' OBJECTID '(' exp_parameter_list ')'
   23    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   24    | exp . '@' TYPEID '.' OBJECTID '(' exp_parameter_list ')'
   34    | exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '*' exp
   37    | exp . '/' exp
   39    | exp . '<' exp
   40    | exp . LE exp
   41    | exp . '=' exp

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '/'  shift, and go to state 86
    '*'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89

    $default  reduce using rule 12 (feature)


State 63

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . exp '}'

    IF          shift, and go to state 48
    LET         shift, and go to state 49
    WHILE       shift, and go to state 50
    CASE        shift, and go to state 51
    NEW         shift, and go to state 52
    ISVOID      shift, and go to state 53
    STR_CONST   shift, and go to state 54
    INT_CONST   shift, and go to state 55
    BOOL_CONST  shift, and go to state 56
    OBJECTID    shift, and go to state 57
    NOT         shift, and go to state 58
    '~'         shift, and go to state 59
    '{'         shift, and go to state 60
    '('         shift, and go to state 61

    exp  go to state 90


State 64

   11 feature: OBJECTID '(' parameter_list ')' ':' TYPEID . '{' exp '}'

    '{'  shift, and go to state 91


State 65

   21 exp: exp . '.' OBJECTID '(' ')'
   22    | exp . '.' OBJECTID '(' exp_parameter_list ')'
   23    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   24    | exp . '@' TYPEID '.' OBJECTID '(' exp_parameter_list ')'
   27    | IF exp . THEN exp ELSE exp FI
   34    | exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '*' exp
   37    | exp . '/' exp
   39    | exp . '<' exp
   40    | exp . LE exp
   41    | exp . '=' exp

    THEN  shift, and go to state 92
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '/'   shift, and go to state 86
    '*'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 66

   60 let_stmt: error . let_stmt

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67

    let_stmt  go to state 93


State 67

   56 let_stmt: OBJECTID . ':' TYPEID IN exp
   57         | OBJECTID . ':' TYPEID ASSIGN exp IN exp
   58         | OBJECTID . ':' TYPEID ',' let_stmt
   59         | OBJECTID . ':' TYPEID ASSIGN exp ',' let_stmt

    ':'  shift, and go to state 94


State 68

   30 exp: LET let_stmt .

    $default  reduce using rule 30 (exp)


State 69

   21 exp: exp . '.' OBJECTID '(' ')'
   22    | exp . '.' OBJECTID '(' exp_parameter_list ')'
   23    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   24    | exp . '@' TYPEID '.' OBJECTID '(' exp_parameter_list ')'
   28    | WHILE exp . LOOP exp POOL
   34    | exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '*' exp
   37    | exp . '/' exp
   39    | exp . '<' exp
   40    | exp . LE exp
   41    | exp . '=' exp

    LOOP  shift, and go to state 95
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '/'   shift, and go to state 86
    '*'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 70

   21 exp: exp . '.' OBJECTID '(' ')'
   22    | exp . '.' OBJECTID '(' exp_parameter_list ')'
   23    | exp . '@' TYPEID '.' OBJECTID '(' ')'
   24    | exp . '@' TYPEID '.' OBJECTID '(' exp_parameter_list ')'
   31    | CASE exp . OF branch ESAC
   34    | exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '*' exp
   37    | exp . '/' exp
   39    | exp . '<' exp
   40    | exp . LE exp
   41    | exp . '=' exp
